finshed home hero section , added links to pages , started servcies section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Aziz Booker | Freelance Web Developer</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Mukta:wght@200;300;400;500&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
@@ -19,16 +25,52 @@
             <a id="logo_link" href="#">
                 <p>Aziz.</p>
             </a>
-            <ul>
-                <li> <a href="#">Portfolio</a></li>
-                <li> <a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
+            <div class="desktop_menu">
+                <ul>
+                    <li> <a href="./pages/portfilo.html">Portfolio</a></li>
+                    <li> <a href="./pages/services.html">Services</a></li>
+                    <li><a href="./pages/aboutme.html">About</a></li>
+                    <li><a href="./pages/contact.html">Contact Me</a></li>
+                </ul>
+            </div>
         </div>
         <h1>Hello.<br>I am <a href="#">Aziz</a>.</h1>
         <h4>
-            I am a freelance web developer <br>helping small business enter the <a href="#">Digital World</a>
+            I am a freelance web developer helping small business <br> enter the <a href="#">Digital World</a></h4>
+    </section>
+    <section class="services ">
+        <div class="wrapper container">
+            <h2>What type of services do i offer?</h2>
+            <div class="grid">
+                <div class="row">
+                    <div class="col">
+                        <h4>Landing page</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse minima omnis error iusto,
+                            consequatur accusantium beatae praesentium iure soluta earum culpa est perferendis illo
+                            corrupti. Eaque rem omnis cum mollitia.</p>
+                    </div>
+                    <div class="col">
+                        <h4>Google Analytics</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam quis repellendus minima,
+                            mollitia cumque saepe ex a eaque impedit asperiores sequi, assumenda omnis enim cum deserunt
+                            aperiam. Est, asperiores nam!</p>
+                    </div>
+                    <div class="col">
+                        <h4>TBD</h4>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia adipisci, rem assumenda
+                            sit modi excepturi suscipit amet corporis eius, saepe facilis eaque aliquam debitis earum
+                            aperiam laboriosam! Nulla, necessitatibus ipsa?</p>
+                    </div>
+                    <div class="col">
+                        <h4>TBD</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem eveniet perferendis, delectus
+                            eius quam necessitatibus accusantium id, vitae, omnis reiciendis recusandae. Architecto,
+                            minus molestiae quibusdam beatae aliquid optio omnis impedit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
