--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
             <h2>What type of services do i offer?</h2>
             <div class="grid">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-lg-3 col-md-6">
                         <h4>Landing page</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse minima omnis error iusto,
                             consequatur accusantium beatae praesentium iure soluta earum culpa est perferendis illo
                             corrupti. Eaque rem omnis cum mollitia.</p>
                     </div>
-                    <div class="col">
+                    <div class="col-lg-3 col-md-6">
                         <h4>Google Analytics</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam quis repellendus minima,
                             mollitia cumque saepe ex a eaque impedit asperiores sequi, assumenda omnis enim cum deserunt
                             aperiam. Est, asperiores nam!</p>
                     </div>
-                    <div class="col">
+                    <div class="col-lg-3 col-md-6">
                         <h4>TBD</h4>
                         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia adipisci, rem assumenda
                             sit modi excepturi suscipit amet corporis eius, saepe facilis eaque aliquam debitis earum
                             aperiam laboriosam! Nulla, necessitatibus ipsa?</p>
                     </div>
-                    <div class="col">
+                    <div class="col-lg-3 col-md-6">
                         <h4>TBD</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem eveniet perferendis, delectus
                             eius quam necessitatibus accusantium id, vitae, omnis reiciendis recusandae. Architecto,
