--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -16,7 +16,7 @@
     <title>Aziz Booker | About Me</title>
 </head>
 <body>
-    <section class="hero_hero container">
+    <section class="hero_about container">
         <div class="nav">
              <a id="logo_link" href="../index.html">
                 <p>Aziz.</p>
@@ -25,11 +25,13 @@
                 <ul>
                     <li> <a href="#">Portfolio</a></li>
                     <li> <a href="#">Services</a></li>
-                    <li><a href="./pages/aboutme.html">About</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">Contact Me</a></li>
                 </ul>
             </div>
         </div>
+        <h2>About Me</h2>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ab quidem architecto molestias in placeat, sed veritatis, aliquam autem odio dolores soluta modi perspiciatis, ut voluptates laudantium porro. Quasi, maxime.</p>
     </section>
     
 </body>
