added testimonial section , added footer , moved index.html into pages folder

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -18,15 +18,15 @@
 <body>
     <section class="hero_about container">
         <div class="nav">
-             <a id="logo_link" href="../index.html">
-                <p>Aziz.</p>
+            <a id="logo_link" href="#">
+                <p id="logo_p">A<span>.</span></p>
             </a>
             <div class="desktop_menu">
                 <ul>
-                    <li> <a href="#">Portfolio</a></li>
-                    <li> <a href="#">Services</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li> <a href="portfilo.html">Portfolio</a></li>
+                    <li> <a href="services.html">Services</a></li>
+                    <li><a href="aboutme.html">About</a></li>
+                    <li><a href="pages/contact.html">Contact Me</a></li>
                 </ul>
             </div>
         </div>
