--- a/pages/index.html
+++ b/pages/index.html
@@ -16,21 +16,21 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
     <section class="hero container">
         <div class="nav">
             <a id="logo_link" href="#">
-                <p>Aziz.</p>
+                <p id="logo_p">A<span>.</span></p>
             </a>
             <div class="desktop_menu">
                 <ul>
-                    <li> <a href="./pages/portfilo.html">Portfolio</a></li>
-                    <li> <a href="./pages/services.html">Services</a></li>
-                    <li><a href="./pages/aboutme.html">About</a></li>
-                    <li><a href="./pages/contact.html">Contact Me</a></li>
+                    <li> <a href="portfilo.html">Portfolio</a></li>
+                    <li> <a href="services.html">Services</a></li>
+                    <li><a href="aboutme.html">About</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
                 </ul>
             </div>
         </div>
@@ -71,6 +71,64 @@
             </div>
         </div>
     </section>
+    <section class="testimonial">
+        <div class="wrapper container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <figure>
+                            <blockquote>
+                                <h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Delectus aperiam voluptatibus harum magnam incidunt veniam.
+                                    Eum eius fuga earum, soluta, vel adipisci harum illo
+                                    perferendis incidunt blanditiis consequuntur debitis
+                                    voluptate?
+                                    </>
+                            </blockquote>
+                            <figcaption>
+                                <h4>- Lorem ipsum ,<cite> lorem ipsum</cite></h4>
+                            </figcaption>
+                        </figure>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <footer class>
+        <div class="wrapper container">
+
+            <div class="footer_links">
+                <a href="#">
+                    <p>Home</p>
+                </a>
+                <a href="./pages/portfilo.html">
+                    <p>Portfilo</p>
+                </a>
+                <a href="./pages/services.html">
+                    <p>Services</p>
+                </a>
+                <a href="./pages/aboutme.html">
+                    <p>About</p>
+                </a>
+                <a href="./pages/contact.html">
+                    <p>Contact</p>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 
 </html>
