worked on landing page

--- a/pages/portfilo.html
+++ b/pages/portfilo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,21 +15,25 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
-    <div class="nav">
-        <a id="logo_link" href="#">
-            <p id="logo_p">A<span>.</span></p>
-        </a>
-        <div class="desktop_menu">
-            <ul>
-                <li> <a href="portfilo.html">Portfolio</a></li>
-                <li> <a href="services.html">Services</a></li>
-                <li><a href="aboutme.html">About</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
+    <section class="hero_portfolio container">
+        <div class="nav">
+            <a id="logo_link" href="index.html">
+                <p id="logo_p">A<span>.</span></p>
+            </a>
+            <div class="desktop_menu">
+                <ul>
+                    <li> <a href="portfilo.html">Portfolio</a></li>
+                    <li> <a href="services.html">Services</a></li>
+                    <li><a href="aboutme.html">About</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
+    </section>
 </body>
+
 </html>
