--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -18,7 +18,7 @@
 <body>
     <section class="hero_about container">
         <div class="nav">
-            <a id="logo_link" href="#">
+            <a id="logo_link" href="index.html">
                 <p id="logo_p">A<span>.</span></p>
             </a>
             <div class="desktop_menu">
@@ -26,7 +26,7 @@
                     <li> <a href="portfilo.html">Portfolio</a></li>
                     <li> <a href="services.html">Services</a></li>
                     <li><a href="aboutme.html">About</a></li>
-                    <li><a href="pages/contact.html">Contact Me</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
                 </ul>
             </div>
         </div>
