--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <title>Aziz Booker | Freelance Web Developer</title>
-
+    <link rel="shortcut icon" href="../images/Aziz_favicon.png" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,6 +21,7 @@
 
 <body>
     <section class="hero container">
+        <!--  
         <div class="nav">
             <a id="logo_link" href="#">
                 <p id="logo_p">A<span>.</span></p>
@@ -34,10 +35,17 @@
                 </ul>
             </div>
         </div>
-        <h1>Hello.<br>I am <a href="#">Aziz</a>.</h1>
-        <h4>
-            I am a freelance web developer helping small business <br> enter the <a href="#">Digital World</a></h4>
+    -->
+        <div class="hero_text">
+        <h1>Hi,My name is <span id="about-me-link"> Aziz </span>.<br> I am a <span id="portfolio-link"> Web Developer </span> 
+            <br> helping small business enter <br> the <span id="digital-world-link">Digital World </span>.</h1>
+            </a>
     </section>
+    <section class="about-me">
+        <h2>Who am i?</h2>
+        <p>Hi! Nice to meet you</p>
+    </section>
+    <!--
     <section class="services ">
         <div class="wrapper container">
             <h2>What type of services do i offer?</h2>
@@ -126,9 +134,11 @@
             </div>
         </div>
     </footer>
+-->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="../script.js"></script>
 </html>
