--- a/pages/services.html
+++ b/pages/services.html
@@ -14,11 +14,12 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
+    <section class="hero_services container">
     <div class="nav">
-        <a id="logo_link" href="#">
+        <a id="logo_link" href="index.html">
             <p id="logo_p">A<span>.</span></p>
         </a>
         <div class="desktop_menu">
@@ -30,5 +31,6 @@
             </ul>
         </div>
     </div>
+    </section>
 </body>
 </html>
