Finshed about me foward and back transition

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,11 +38,12 @@
     -->
         <div class="hero_text">
         <h1>Hi,My name is <span id="about-me-link"> Aziz </span>.<br> I am a <span id="portfolio-link"> Web Developer </span> 
-            <br> helping small business enter <br> the <span id="digital-world-link">Digital World </span>.</h1>
+            <br> helping small business enter <br> the <span href="/" id="digital-world-link">Digital World </span>.</h1>
             </a>
     </section>
     <section class="about-me">
-        <h2>Who am i?</h2>
+        <button id="about-me-back">Go Back</button>
+        <h1>Who am i?</h1>
         <p>Hi! Nice to meet you</p>
     </section>
     <!--
