worked on portfolio transtion

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,8 +43,13 @@
     </section>
     <section class="about-me">
         <button id="about-me-back">Go Back</button>
-        <h1>Who am i?</h1>
+        <h1>About Me</h1>
         <p>Hi! Nice to meet you</p>
+    </section>
+    <section class="portfolio">
+        <button id="portfolio-back">Go Back</button>
+        <h1>Portfolio</h1>
+        
     </section>
     <!--
     <section class="services ">
