finshed page transtions

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,24 +20,14 @@
 </head>
 
 <body>
-    <section class="hero container">
-        <!--  
-        <div class="nav">
-            <a id="logo_link" href="#">
-                <p id="logo_p">A<span>.</span></p>
-            </a>
-            <div class="desktop_menu">
-                <ul>
-                    <li> <a href="portfilo.html">Portfolio</a></li>
-                    <li> <a href="services.html">Services</a></li>
-                    <li><a href="aboutme.html">About</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
-                </ul>
-            </div>
+    <nav>
+        <div class="menu-toggle">
+            <input type="checkbox" name="" id="">
         </div>
-    -->
+    </nav>
+    <section class="hero container">
         <div class="hero_text">
-        <h1>Hi,My name is <span id="about-me-link"> Aziz </span>.<br> I am a <span id="portfolio-link"> Web Developer </span> 
+        <h1>Hi , My name is <span id="about-me-link"> Aziz </span>.<br> I am a <span id="portfolio-link"> Web Developer </span> 
             <br> helping small business enter <br> the <span href="/" id="digital-world-link">Digital World </span>.</h1>
             </a>
     </section>
@@ -50,6 +40,10 @@
         <button id="portfolio-back">Go Back</button>
         <h1>Portfolio</h1>
         
+    </section>
+    <section class="digital-world absolute-20">
+        <button id="digital-world-back">Go Back</button>
+        <h1>Do you need a Website?</h1>
     </section>
     <!--
     <section class="services ">
